[package]
name = "arm_vgic"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
vgicv3 = []

[dependencies]
axdevice_base = { git = "https://github.com/arceos-hypervisor/axdevice_crates.git", branch = "inject_interrupt" }
axaddrspace = { git = "https://github.com/arceos-hypervisor/axaddrspace.git" }
axvisor_api = { git = "https://github.com/arceos-hypervisor/axvisor_api.git", branch = "inject_interrupt" }
memory_addr = "0.3"
axerrno = "0.1.0"
arm_gicv2 = { git = "https://github.com/arceos-hypervisor/arm_gicv2.git", branch = "debin/2vm_timer" }
log = "0.4"
# vcpu_if = { path = "../vcpu_if" }
# crate_interface = "0.1.3"
spin = "0.9"
tock-registers = "0.8"
bitmaps = { version = "3.2", default-features = false }
