[package]
version = "0.1.0"
authors = [
  "Mingxian Su <aarkegz@gmail.com>",
  "DeBin Luo <luodeb@outlook.com>",
]
categories = ["os", "no-std"]
edition = "2021"
keywords = ["hypervisor", "kernel", "vgic"]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
name = "arm_vgic"
repository = "https://github.com/arceos-hypervisor/arm_vgic"
description = "ARM Virtual Generic Interrupt Controller (VGIC) implementation."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
vgicv3 = []

[dependencies]
axaddrspace = "0.2"
axdevice_base = "0.1"
axvisor_api = "0.2"

aarch64-cpu = "11.0"
aarch64_sysreg = "0.1.1"
axerrno = "0.2"
bitmaps = {version = "3.2", default-features = false}
log = "0.4"
memory_addr = "0.4"
spin = "0.10"
tock-registers = "0.10"

[patch.crates-io]
axvisor_api = { git = "https://github.com/arceos-hypervisor/axvisor_api", branch = "aar-master" }
axaddrspace = { git = "https://github.com/arceos-hypervisor/axaddrspace", branch = "aar-master" }
axdevice_base = { git = "https://github.com/arceos-hypervisor/axdevice_crates", branch = "aar-master"}
